--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>our-team</title>
 </head>
 
 <body>
-    <ul id="teams"></ul>
+    <div class="text-center">
+        <h1>Meet Our Teem</h1>
+    </div>
+    <div class="container p-5">
+        <form id="userForm" action="#" method="POST">
+            <div class="mb-3">
+                <label for="nome" class="form-label">Nome *</label>
+                <input type="text" class="form-control" id="nome" name="nome" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="lavoro" class="form-label">Lavoro *</label>
+                <input type="text" class="form-control" id="lavoro" name="lavoro" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="email" class="form-label">Email *</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Invia</button>
+        </form>
+    </div>
+    <div class="container">
+        <div id="team-cards" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4"></div>
+
+    </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 
