Add padding to the header section in index.html for improved layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="text-center">
+    <div class="text-center p-4">
         <h1>Meet Our Teem</h1>
     </div>
     <div class="container p-5">
